# PlaceRecognitonDBoW2

./: .gitignore  CMakeLists.txt  README.md  main.py  test.sh
UI/: main_window.ui
include/: loopdetector.h
src/: loopdetector.cpp  main.cpp
